feat(갤러리/성능): 네비 6개 카테고리 재구성 + 공개페이지 lazy + ZIP 스트리밍 외
- 갤러리 1차 6개로 개편(알미늄채널/아트네온 신규), 2차 탭 재구성
- 관리자 업로드 카테고리도 동일 구조로 갱신
- 공개 About/Gallery/Support 라우트 lazy loading — 첫 진입 번들 감소
- 갤러리 (category, created_at) 인덱스 + Flyway V9
- HikariCP 풀 max=20 — 동시 거래처 업로드 대비
- 갤러리 <img loading="lazy"> + API Cache-Control 5분
- 워크시트 패키지 ZIP 다운로드 StreamingResponseBody 전환 (OOM 차단)
- 휴지통 자동삭제 스케줄러 zone="Asia/Seoul" 명시
- 거래처 첨부 한도 50MB → 60MB
- 모바일 지시서 뷰어 PDF 가운데 정렬 산발적 어긋남 보정 (RAF×2 + stage/pageWidth 변동 재정렬)

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>